--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -207,3 +207,8 @@
     position: fixed;
 }
 
+@media only screen and (max-width: 700px) {
+    #sideTabs {
+        display: none
+    }
+}
